# crm

./: README.md  license.txt  pyproject.toml  setup.py
credlawn/: hooks.py  modules.txt
credlawn/credlawn/doctype/: __init__.py
credlawn/credlawn/doctype/access_tokens/: access_tokens.js  access_tokens.json  access_tokens.py  access_tokens_list.js  test_access_tokens.py
credlawn/credlawn/doctype/adobe/: adobe.js  adobe.json  adobe.py  adobe_list.js  test_adobe.py
credlawn/credlawn/doctype/adobe_database/: adobe_database.js  adobe_database.json  adobe_database.py  adobe_database_list.js  test_adobe_database.py
credlawn/credlawn/doctype/adobe_dump/: adobe_dump.js  adobe_dump.json  adobe_dump.py  adobe_dump_list.js  test_adobe_dump.py
credlawn/credlawn/doctype/agent_number/: agent_number.js  agent_number.json  agent_number.py  agent_number_list.js  test_agent_number.py
credlawn/credlawn/doctype/approved_dump/: approved_dump.js  approved_dump.json  approved_dump.py  test_approved_dump.py
credlawn/credlawn/doctype/bank_links/: bank_links.js  bank_links.json  (+3 more)
credlawn/public/css/: credlawn.css
credlawn/scripts/: allocate_calling_data.py  assign_lead_mannually.py  clean_redirect_link.py  create_adobe_database_from_adobe copy.py  create_adobe_database_from_adobe.py  delete_bot_click_entry.py  email_processing.py  fetch_mobile_no_from_svkyc_link.py  find_duplicate_in_adobe.py  map_employee_in_approved_dump.py  send_new_leads.py  send_sms_campaign.py  update_campaign_lead_status.py  update_employee_age_n_tenure.py
credlawn/webhook/: sms_delivery_report.py
(+131 files in other folders)
